--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,14 +8,47 @@
     {% else %}
     <title>Local Community Board</title>
     {% endif %}
-    <link rel="stylesheet" href="{{ url_for('static',
-    filename='style.css') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styling-css/common-elements-style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="{{ url_for('static', filename='common-elements.js') }}"></script>
 </head>
 <body>
-    <div><p>Common Header for all pages will go here</p></div>
-    <div>Community Board: <a href="/create-request">Create Request</a></div>
-    <div>Community Board: <a href="/view-request">View Request</a></div>
-    <hr>
+    <!-- The header section with application theme, logo and user profile options menu -->
+    <div class="header">
+        <!-- Community Logo in the header -->
+        <a href="#" class="AppLogo">
+            <img src="{{ url_for('static',
+            filename='images/AppLogo.jpg') }}" alt="ApplicationLogo">
+        </a> 
+        <!-- The name of application in the header -->
+        <p class="application-name">Local Community Board</p>
+        <!-- The user profile options menu has options to logout and view user profile details -->
+        <nav class="navigation-menu">
+            <div class="fa-solid fa-xmark" id="cancel-button"></div>
+            <div class="profile-content">
+                <h3>User Name</h3>
+                <p>User Id</p> 
+            </div>
+            <div class="fa-solid fa-user-large" id="profile"></div>
+            <div class="user-button">
+                <button class="profile-buttons" type="button"><a href="{{ url_for('index') }}">My profile</a></button>
+                <button class="profile-buttons" type="button"><a href="{{ url_for('index') }}">Log out</a></button>
+            </div>
+        </nav>
+        <!-- User profile options menu icon in the header -->
+        <div class="header-icons">
+            <div class="fas fa-bars" id="menu-button"></div>
+        </div>
+        <hr>
+    </div>
+
+    <!-- Side navigation bar to navigate to different pages such as Create Request, View Request and Home page -->
+    <div class="sidebar">
+        <a href="{{ url_for('index') }}" class="active">Home</a>
+        <a href="{{ url_for('CreateRequest') }}">Create Request</a>
+        <a href="{{ url_for('ViewRequest') }}">View Request</a>
+      </div>
     {% block content %}{% endblock %}
 </body>
 </html>
