--- a/app/templates/create-request.html
+++ b/app/templates/create-request.html
@@ -1,6 +1,34 @@
-{% extends "base.html" %}
-{% block content %}
-    <h1>Create request page content</h1>
-    <script src="{{ url_for('static', filename='create-request.js')
-    }}"></script>
+{% extends "base.html" %} {% block content %}
+<!-- Link to stylesheet -->
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='styling-css/common-elements-style.css') }}"
+/>
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='styling-css/create-request-style.css') }}"
+/>
+<!-- The create request page allow user to create post content detail including the title, content and tags -->
+<div class="container">
+  <h1>Create a Post</h1>
+  <form id="postForm">
+    <label for="postTitle">Title:</label>
+    <input type="text" id="postTitle" name="postTitle" required /><br /><br />
+    <label for="postContent">Content:</label><br />
+    <textarea
+      id="postContent"
+      name="postContent"
+      rows="5"
+      cols="50"
+      required
+    ></textarea
+    ><br /><br />
+    <label for="postTag">Tags:</label>
+    <input type="text" id="postTag" name="postTag" required /><br /><br />
+    <button type="submit">Submit</button>
+  </form>
+</div>
+<!-- Link to js sheet -->
+<script src="{{ url_for('static', filename='create-request.js')}}"></script>
+
 {% endblock %}
