--- a/app/static/styling-css/common-elements-style.css
+++ b/app/static/styling-css/common-elements-style.css
@@ -1,4 +1,3 @@
-/* Defining css custom colour properties (variables) within root selector*/
 :root{
     --main-color:#c8cee6;
     --elements-color:#4f2194;
@@ -7,7 +6,6 @@
     --hover-element:white;
 }
 
-/* Setting common styles for all elements using the universal selector */
 *{
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
@@ -20,34 +18,31 @@
     transition: .2s linear;
 }
 
-/* Header styling */
 .header{
     background:var(--elements-color);
     display:flex;
     align-items: center;
 }
 
-/* App Logo and application name in header styling */
 .header .AppLogo img{
-    padding-left:20px; 
+    padding-left:20px;
     padding-top: 10px;
     height:50px;
     padding-bottom: 5px;
 }
 
 .application-name {
-    margin-left: 20px; 
+    margin-left: 20px;
     font-size: 30px;
     font-weight: bold;
     color: var(--main-color);
 }
 
-/* Header Icon for user profile options menu */
 .header-icons{
     color:var(--main-color);
     cursor:pointer;
     font-size: 30px;
-    margin-left: 700px;
+    margin-left: 100px;
 }
 
 .header-icons:hover,
@@ -61,7 +56,7 @@
  */
 #cancel-button{
     font-size: 20px;
-    color: var(--main-color); 
+    color: var(--main-color);
     margin: 10px;
     text-align: right;
     float: right;
@@ -69,7 +64,7 @@
 
 #profile{
     font-size: 60px;
-    color: var(--main-color); 
+    color: var(--main-color);
     text-align: right;
     float: right;
     margin-top: 30px;
@@ -129,7 +124,7 @@
     display:block;
 }
 
-/* Side navigation bar styling */
+
 .sidebar {
     padding: 0;
     width: 200px;
@@ -161,3 +156,12 @@
     background-color: var(--elements-color);
     color: var(--hover-element);
 }
+
+.content-container {    
+    margin-left: 200px;
+    padding: 20px;
+    overflow: auto;    
+    height: calc(100vh - 20px);
+    margin-top: 20px;
+}
+
