--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,14 @@
 {% extends "base.html" %}
+
 {% block content %}
-    <h1>Home Page content will go here</h1>
+    <h1>The Posts</h1>
+    <div id="posts">
+        {% for post in posts %}
+            <div class="post">
+                <h2>{{ post.author.username }}</h2>
+                <p>{{ post.body }}</p>
+            </div>
+            <hr>
+        {% endfor %}
+    </div>
 {% endblock %}
