--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -141,7 +141,7 @@
 <body>
 
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>Register</h2>
         <form class="login-form">
             <div class="form-group">
                 <label for="username">username: </label>
@@ -154,11 +154,16 @@
             </div>
 
             <div class="form-group">
-                <button type="submit">Login</button>
+                <label for="password">confirm password: </label>
+                <input type="password" id="password" name="password" required>
+            </div>
+
+            <div class="form-group">
+                <button type="submit">Register</button>
             </div>
         </form>
 
-        <a class="register-link" href="./register">Don't have an account? Register one now!</a>
+        <a class="login-link" href="./login">Already have an account? login!</a>
     </div>
 
 </body>
