--- a/app/static/styling-css/create-request-style.css
+++ b/app/static/styling-css/create-request-style.css
@@ -1,9 +1,9 @@
-body {
+/* body {
   font-family: Arial, sans-serif;
   background-color: #f9f9f9;
   margin: 0;
   padding: 0;
-}
+} */
 
 .container {
   max-width: 800px;
