--- a/app/static/styling-css/posts.css
+++ b/app/static/styling-css/posts.css
@@ -18,7 +18,7 @@
 
 #posts {
     width: 80%;
-    margin: 20px auto;
+    margin: 0 200px;
     padding: 20px;
     background-color: var(--main-color);
     border-radius: 8px;
