--- a/app/static/styling-css/request-button.css
+++ b/app/static/styling-css/request-button.css
@@ -1,7 +1,7 @@
 .request-card {
-  margin-left: 30px;
+  margin: 0 200px;
   width: 190px;
-  height: 50px; /* 根据需要调整高度 */
+  height: 50px; 
   background: rgb(160, 83, 255);
   transition: all 0.4s;
   border-radius: 10px;
