--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+<script src="{{ url_for('static', filename='index.js')
+    }}"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='styling-css/index-search-box.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='styling-css/posts.css') }}">
 <div class="form">
     <label for="search">
         <input required="" autocomplete="off" placeholder="search..." id="search" type="text">
@@ -20,172 +24,6 @@
     </label>
 </div>
 
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-  var searchInput = document.getElementById('search');
-  var searchIcon = document.querySelector('.swap-on');
-  var closeButton = document.querySelector('.close-btn');
-
-  searchIcon.addEventListener('click', function() {
-      performSearch(searchInput.value);
-  });
-
-  searchInput.addEventListener('input', function(event) {
-      event.preventDefault();
-      performSearch(searchInput.value);
-  });
-
-  closeButton.addEventListener('click', function() {
-      searchInput.value = '';
-  });
-
-  function performSearch(query) {
-    fetch('/search', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ query: query })
-    })
-    .then(response => {
-        if (!response.ok) {
-            throw new Error('Network response was not ok');
-        }
-        return response.text();
-    })
-    .then(response => {
-      document.querySelector(".content-container").innerHTML = response
-    })
-    .catch(error => {
-        console.error('There has been a problem with your fetch operation:', error);
-    });
-  }
-
-  
-});
-</script>
-
-<style>
-
-
-.form {
-  margin-left: 30px;
-  --input-bg: #FFf;
- 
-  --padding: 1.5em;
-  --rotate: 80deg;
- 
-  --gap: 2em;
-  
-  --icon-change-color: #15A986;
- 
-  --height: 40px;
- 
-  width: 200px;
-  padding-inline-end: 1em;
- 
-  background: var(--input-bg);
-  position: relative;
-  border-radius: 4px;
-}
-
-.form label {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: var(--height);
-}
-
-.form input {
-  width: 100% !important;
-  padding-inline-start: calc(var(--padding) + var(--gap)) !important;
-  outline: none !important;
-  background: none;
-  border: 0 !important;
-}
-
-.form svg {
-  
-  color: #111;
-  transition: 0.3s cubic-bezier(.4,0,.2,1);
-  position: absolute;
-  height: 15px;
-}
-
-.icon {
-  position: absolute;
-  left: var(--padding);
-  transition: 0.3s cubic-bezier(.4,0,.2,1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swap-off {
-  transform: rotate(-80deg);
-  opacity: 0;
-  visibility: hidden;
-}
-
-.close-btn {
-  
-  background: none;
-  border: none;
-  right: calc(var(--padding) - var(--gap));
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #111;
-  padding: 0.1em;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  transition: 0.3s;
-  opacity: 0;
-  transform: scale(0);
-  visibility: hidden;
-}
-
-.form input:focus ~ .icon {
-  transform: rotate(var(--rotate)) scale(1.3);
-}
-
-.form input:focus ~ .icon .swap-off {
-  opacity: 1;
-  transform: rotate(-80deg);
-  visibility: visible;
-  color: var(--icon-change-color);
-}
-
-.form input:focus ~ .icon .swap-on {
-  opacity: 0;
-  visibility: visible;
-}
-
-.form input:valid ~ .icon {
-  transform: scale(1.3) rotate(var(--rotate))
-}
-
-.form input:valid ~ .icon .swap-off {
-  opacity: 1;
-  visibility: visible;
-  color: var(--icon-change-color);
-}
-
-.form input:valid ~ .icon .swap-on {
-  opacity: 0;
-  visibility: visible;
-}
-
-.form input:valid ~ .close-btn {
-  opacity: 1;
-  visibility: visible;
-  transform: scale(1);
-  transition: 0s;
-}
-
-</style>
 <div class="request-card" onclick="window.location.href = '../create-request'">
     <div class="button-content">
       <span>Request</span>
