--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,10 +3,10 @@
 
     <div class="login-container">
         <h2>Login</h2>
-        <form class="login-form">
+        <form class="login-form" method="post" action="/login">
             <div class="form-group">
-                <label for="username">username: </label>
-                <input type="text" id="username" name="username" required>
+                <label for="email">email: </label>
+                <input type="text" id="email" name="email" required>
             </div>
 
             <div class="form-group">
@@ -15,7 +15,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit">Login</button>
+                <button type="submit" value="Login">Login</button>
             </div>
         </form>
 
