--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,7 +2,12 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styling-css/loginAndRegister.css') }}">
     <div class="login-container">
         <h2>Register</h2>
-        <form class="login-form">
+        <form class="login-form" method="post" action="/register">
+            <div class="form-group">
+                <label for="email">email address: </label>
+                <input type="text" id="email" name="email" required>
+            </div>
+
             <div class="form-group">
                 <label for="username">username: </label>
                 <input type="text" id="username" name="username" required>
@@ -19,7 +24,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit">Register</button>
+                <button type="submit" value="Register">Register</button>
             </div>
         </form>
 
