In the register page, pop out error when user already exist( check by emai address)

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -27,6 +27,9 @@
                 <button type="submit" value="Register">Register</button>
             </div>
         </form>
+        {% if error %}
+        <p style="color: red;">{{ error }}</p>
+        {% endif %}
 
         <a class="login-link" href="./login">Already have an account? login!</a>
     </div>
