Routed create request page to create a new request and store in db, then redirect to the view request page to view it.

--- a/app/templates/create-request.html
+++ b/app/templates/create-request.html
@@ -12,25 +12,25 @@
 <div class="container">
   <h1>Create a Post</h1>
   <!-- anfter the submit button is clicked, a POST request to the "/submit" URL with the form data -->
-  <form id="postForm" action="/submit" method="post">
-    <label for="postTitle">Title:</label>
-    <input type="text" id="postTitle" name="postTitle" required /><br /><br />
-    <label for="postContent">Content:</label><br />
+  <form id="postForm" action="/create-request" method="post">
+    <label for="requestTitle">Title:</label>
+    <input type="text" id="requestTitle" name="requestTitle" required /><br /><br />
+    <label for="requestContent">Content:</label><br />
     <textarea
-      id="postContent"
-      name="postContent"
+      id="requestContent"
+      name="requestContent"
       rows="5"
       cols="50"
       required
     ></textarea
     ><br /><br />
-    <label for="postTag">Tags:</label>
-    <input type="text" id="postTag" name="postTag" required /><br /><br />
+    <label for="tags">Tags (comma-separated):</label>
+    <input type="text" id="tags" name="tags"><br><br>
     <!-- link submit button to the view content page -->
     <button
       type="submit"
       class="btn btn-submit"
-      onclick="location.href='{{ url_for('Submit') }}'"
+      value="Submit"
     >
       Submit
     </button>
