--- a/app/templates/view-request.html
+++ b/app/templates/view-request.html
@@ -9,9 +9,9 @@
     <!-- The view request page displaying the request details and an option to respond to request -->
     <div class="view-request-content">
         <div><p><strong>Tag: </strong>#2331</p></div>
-        <div><p><strong>Title: </strong>Looking for a house on rent</p><br>
+        <div><p><strong>Title: </strong>{{request.request_title}}</p><br>
             <p class="query-description"><Strong>Description:</Strong></p><br>
-            <p class="description-content">A small paragraph with the description of the query or request posted by user 1.</p>
+            <p class="description-content">{{request.request_content}}</p>
         </div>
         <button class="respond-button" type="button">Respond</button>
         <!-- The respond to request section displayed on clicking respond button -->
