--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,8 +35,8 @@
     <div id="posts">
         {% for post in posts %}
             <div class="post">
-                <h2>{{ post.author.username }}</h2>
-                <p>{{ post.body }}</p>
+                <h2>{{ post.author.user_name }}</h2>
+                <p>{{ post.request_title }}</p>
             </div>
             <hr>
         {% endfor %}
