Routed log out function

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
             <div class="fa-solid fa-user-large" id="profile"></div>
             <div class="user-button">
                 <button class="profile-buttons" type="button"><a href="{{ url_for('index') }}">My profile</a></button>
-                <button class="profile-buttons" type="button"><a href="{{ url_for('index') }}">Log out</a></button>
+                <button class="profile-buttons" type="button"><a href="{{ url_for('Logout') }}">Log out</a></button>
             </div>
         </nav>
         <!-- User profile options menu icon in the header -->
