Created my profile page and routed it with db

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,7 +32,7 @@
             </div>
             <div class="fa-solid fa-user-large" id="profile"></div>
             <div class="user-button">
-                <button class="profile-buttons" type="button"><a href="{{ url_for('index') }}">My profile</a></button>
+                <button class="profile-buttons" type="button"><a href="{{ url_for('myProfile') }}">My profile</a></button>
                 <button class="profile-buttons" type="button"><a href="{{ url_for('Logout') }}">Log out</a></button>
             </div>
         </nav>
