Pass the current user information to base page to allow it display user name

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,8 +27,9 @@
         <nav class="navigation-menu">
             <div class="fa-solid fa-xmark" id="cancel-button"></div>
             <div class="profile-content">
-                <h3>User Name</h3>
-                <p>User Id</p> 
+                <h3>{{ g.user.user_name }}</h3>
+                <!-- user id is too personal too display -->
+                <!-- <p>User Id</p>  -->
             </div>
             <div class="fa-solid fa-user-large" id="profile"></div>
             <div class="user-button">
