--- a/app/templates/view-request.html
+++ b/app/templates/view-request.html
@@ -1,29 +1,55 @@
-{% extends "base.html" %}
-{% block content %}
-    <!-- Linked the styling sheets -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styling-css/common-elements-style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styling-css/view-request.css') }}">
-    <!-- Linked the javascript code file -->
-    <script src="{{ url_for('static', filename='view-request.js')
+{% extends "base.html" %} {% block content %}
+<!-- Linked the styling sheets -->
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='styling-css/common-elements-style.css') }}"
+/>
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='styling-css/view-request.css') }}"
+/>
+<!-- Linked the javascript code file -->
+<script src="{{ url_for('static', filename='view-request.js')
     }}"></script>
-    <!-- The view request page displaying the request details and an option to respond to request -->
-    <div class="view-request-content">
-        <div><p><strong>Tag: </strong>#2331</p></div>
-        <div><p><strong>Title: </strong>{{request.request_title}}</p><br>
-            <p class="query-description"><Strong>Description:</Strong></p><br>
-            <p class="description-content">{{request.request_content}}</p>
-        </div>
-        <button class="respond-button" type="button">Respond</button>
-        <!-- The respond to request section displayed on clicking respond button -->
-        <div class="response-content">
-            <!-- The respond to request section has a field to enter response and submit and back buttons -->
-            <textarea id="response" name="response-field"></textarea>
-            <div class="response-buttons">
-                <button class="submit-button" type="button">Submit</button>
-                <button class="back-button" type="button">Back</button>
-            </div>
-        </div>
-    </div>
-    
+<!-- The view request page displaying the request details and an option to respond to request -->
+<div class="view-request-content">
+  <div>
+    <p><strong>Title: </strong>{{request.request_title}}</p>
+    <br />
+    <p class="query-description"><strong>Description:</strong></p>
+    <br />
+    <p class="description-content">{{request.request_content}}</p>
+  </div>
+  <p>Tags:</p>
+  <ul>
+    {% for tag in request.tags %}
+    <li>{{ tag.tag_name }}</li>
+    {% endfor %}
+  </ul>
+  <h3>Responses:</h3>
+  <ul>
+    {% for response in request.response %}
+    <li>From user:{{response.contributor.user_name}}</li>
+    <li>{{ response.response_content }}</li>
+    {% endfor %}
+  </ul>
+  <button class="respond-button" type="button">Respond</button>
+  <!-- The respond to request section displayed on clicking respond button -->
+  <div class="response-content" id="responseForm" style="display: none">
+    <!-- The respond to request section has a field to enter response and submit and back buttons -->
+    <form
+      action="{{ url_for('ViewRequest', request_id=request.request_id) }}"
+      method="post"
+    >
+      <textarea id="response" name="response" required></textarea>
+      <div class="response-buttons">
+        <button class="submit-button" type="submit">Submit</button>
+        <button class="back-button" type="button" onclick="hideResponseForm()">
+          Back
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
 
 {% endblock %}
