Allow user to delete request

--- a/app/templates/my-profile.html
+++ b/app/templates/my-profile.html
@@ -24,6 +24,12 @@
   <ul>
     {% for post in posts %}
     <li>{{ post.request_title }} - {{ post.date_posted }}</li>
+    <form
+      action="{{ url_for('delete_post', post_id=post.request_id) }}"
+      method="post"
+    >
+      <button type="submit">Delete</button>
+    </form>
     {% endfor %}
   </ul>
 
