--- a/app/templates/my-profile.html
+++ b/app/templates/my-profile.html
@@ -36,7 +36,15 @@
   <h2>My Responses</h2>
   <ul>
     {% for response in responses %}
-    <li>{{ response.response_content }} - {{ response.date_responded }}</li>
+    <li>
+      {{ response.response_content }} - {{ response.date_responded }}
+      <form
+        action="{{ url_for('delete_response', response_id=response.response_id) }}"
+        method="post"
+      >
+        <button type="submit">Delete</button>
+      </form>
+    </li>
     {% endfor %}
   </ul>
 </div>
