--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -9,7 +9,9 @@
     {% for result in results %}
     <div class="post">
       <h2>{{ result.author.user_name }}</h2>
-      <p>{{ result.request_title }}</p>
+      <a href="{{ url_for('ViewRequest', request_id=result.request_id) }}"
+        >{{ result.request_title }}</a
+      >
       <p>{{ result.request_content }}</p>
     </div>
     <hr />
