--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -73,6 +73,12 @@
 <div id="posts">
   {% for post in posts %}
   <div class="post">
+    <img
+      src="/static/user-account-image/{{post.author.avatar_filename}}"
+      height="50"
+      width="50"
+      alt="User Avatar"
+    />
     <h2>{{ post.author.user_name }}</h2>
     <!-- redirect to the view request page when one title is clicked -->
     <p>
