Implemented WTForms, CSS Unify And Password Hashing For Login And Register Page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
         <nav class="navigation-menu">
             <div class="fa-solid fa-xmark" id="cancel-button"></div>
             <div class="profile-content">
-                <h3>{{ g.user.user_name }}</h3>
+                <h3>{{ current_user.user_name }}</h3>
                 <!-- user id is too personal too display -->
                 <!-- <p>User Id</p>  -->
             </div>
