--- a/app/static/styling-css/loginAndRegister.css
+++ b/app/static/styling-css/loginAndRegister.css
@@ -1,126 +1,102 @@
 body {
     font-family: 'Arial', sans-serif;
-
     margin: 0;
-
     padding: 0;
-
-    display: flex;
-
+    display: ruby-text;
     justify-content: center;
-
     align-items: center;
-
     height: 100vh;
-
     background-size: cover;
-
+    background-color: var(--base);
 }
 
+.login-heading h2{
+    color: var(--main-color);
+    font-weight: bolder;
+    font-size: 35px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 .login-container {
-    background-color: rgba(255, 255, 255, 0.9);
-
+    background-color: var(--main-color);
     border-radius: 8px;
-
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-
     padding: 30px;
-
-    width: 300px;
-
-    text-align: center;
-
+    width: 600px;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    margin-top: 35px;
 }
-
 
 .login-container h2 {
-    color: #333;
-
+    color: var(--elements-color);
     margin-bottom: 20px;
-
+    text-transform: uppercase;
+    font-size: 35px;
+    font-weight: bold;
 }
 
-
-.login-form {
-    margin-top: 20px;
-
-}
-
-
-.form-group {
-    margin-bottom: 20px;
-
-}
-
-
-.form-group label {
-    font-size: 1.1em;
-
+.register-link,
+.login-link {
     display: block;
-
-    margin-bottom: 5px;
-
-    color: #555;
-
-    text-align: left;
-
-}
-
-
-.form-group input {
-    width: 100%;
-
-    padding: 10px;
-
-    box-sizing: border-box;
-
-    border: 1px solid #ccc;
-
-    border-radius: 4px;
-
-}
-
-
-.form-group button {
-    width: 100px;
-
-    background-color: #4caf50;
-
-    color: #fff;
-
-    padding: 12px 20px;
-
-    border: none;
-
-    border-radius: 4px;
-
-    cursor: pointer;
-
-    font-size: 16px;
-
-}
-
-
-.form-group button:hover {
-    background-color: #45a049;
-
-}
-
-
-.register-link {
-    display: block;
-
-    color: cornflowerblue;
-
+    color: var(--base);
     margin-top: 20px;
-
     text-decoration: none;
-
+    font-size: 16px;
 }
 
 
-.register-link:hover {
+.register-link:hover,
+.login-link:hover {
     text-decoration: underline;
+    color: var(--elements-color);
+    font-size: 17px;
+}
 
+.login-form label{
+    font-size: 20px;
+    text-align: left;
+}
+
+.login-form input{
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 15px;
+}
+
+.login-form input:focus{
+    border-color: var(--elements-color);
+}
+
+.login-form #submit{
+    width: 50%;
+    background-color: var(--base);
+    margin-top: 35px;
+    color: var(--main-color);
+    font-size: 20px;
+}
+
+.login-form #submit:hover{
+    background-color: var(--elements-color);
+    margin-top: 35px;
+    color: white;
+    line-height: 1.1;
+    cursor: pointer;
+}
+
+.login-form span,
+.login-container ul li{
+    color: red;
+    font-size: 15px;
+    margin-top: 5px;
+    display: flex;
+}
+
+.login-container ul{
+    list-style-type: none;
 }
