--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,36 +1,52 @@
-{% extends "base.html" %} {% block content %}
+{% block content %}
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='styling-css/common-elements-style.css') }}"
+/>
 <link rel="stylesheet" href="{{ url_for('static', filename='styling-css/loginAndRegister.css') }}">
     <div class="login-container">
         <h2>Register</h2>
-        <form class="login-form" method="post" action="/register">
-            <div class="form-group">
-                <label for="email">email address: </label>
-                <input type="text" id="email" name="email" required>
-            </div>
-
-            <div class="form-group">
-                <label for="username">username: </label>
-                <input type="text" id="username" name="username" required>
-            </div>
-
-            <div class="form-group">
-                <label for="password">password: </label>
-                <input type="password" id="password" name="password" required>
-            </div>
-
-            <div class="form-group">
-                <label for="password">confirm password: </label>
-                <input type="password" id="password" name="password" required>
-            </div>
-
-            <div class="form-group">
-                <button type="submit" value="Register">Register</button>
-            </div>
-        </form>
-        {% if error %}
-        <p style="color: red;">{{ error }}</p>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
         {% endif %}
-
+        {% endwith %}
+        <form class="login-form" method="post" action="/register">
+            {{ form.hidden_tag() }}
+            <p>
+                {{ form.username.label }}<br>
+                {{ form.username }}<br>
+                {% for error in form.username.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+            </p>
+            <p>
+                {{ form.email.label }}<br>
+                {{ form.email }}<br>
+                {% for error in form.email.errors %}
+                <span> {{ error }} </span>
+                {% endfor %}
+            </p>
+            <p>
+                {{ form.password.label }}<br>
+                {{ form.password }}<br>
+                {% for error in form.password.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+            </p>
+            <p>
+                {{ form.password2.label }}<br>
+                {{ form.password2 }}<br>
+                {% for error in form.password2.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+            </p>
+            <p>{{ form.submit() }}</p>
+        </form>
         <a class="login-link" href="./login">Already have an account? login!</a>
     </div>
 
