--- a/app/templates/create-request.html
+++ b/app/templates/create-request.html
@@ -9,43 +9,45 @@
   href="{{ url_for('static', filename='styling-css/create-request-style.css') }}"
 />
 <!-- The create request page allow user to create post content detail including the title, content and tags -->
-<div class="container">
-  <h1>Create a Post</h1>
-  <!-- anfter the submit button is clicked, a POST request to the "/submit" URL with the form data -->
-  {% with messages = get_flashed_messages() %}
-  {% if messages %}
-  <ul>
-    {% for message in messages %}
-    <li>{{ message }}</li>
-    {% endfor %}
-  </ul>
-  {% endif %}
-  {% endwith %}
-  <form id="postForm" action="/create-request" method="post">
-    {{ form.hidden_tag() }}
-    <p>
-      {{ form.request_title.label }}<br>
-      {{ form.request_title }}<br>
-      {% for error in form.request_title.errors %}
-      <span>{{ error }}</span>
+<div class="home-page">
+  <div class="container">
+    <h1>Create a Post</h1>
+    <!-- anfter the submit button is clicked, a POST request to the "/submit" URL with the form data -->
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+      {% for message in messages %}
+      <li>{{ message }}</li>
       {% endfor %}
-    </p>
-    <p>
-      {{ form.request_content.label }}<br>
-      {{ form.request_content}}<br>
-      {% for error in form.request_content.errors %}
-      <span>{{ error }}</span>
-      {% endfor %}
-    </p>
-    <p>
-      {{ form.tags.label }}<br>
-      {{ form.tags}}<br>
-      {% for error in form.tags.errors %}
-      <span>{{ error }}</span>
-      {% endfor %}
-    </p>
-    <p>{{ form.submit() }}</p>
-  </form>
+    </ul>
+    {% endif %}
+    {% endwith %}
+    <form id="postForm" action="/create-request" method="post">
+      {{ form.hidden_tag() }}
+      <p>
+        {{ form.request_title.label }}<br>
+        {{ form.request_title }}<br>
+        {% for error in form.request_title.errors %}
+        <span>{{ error }}</span>
+        {% endfor %}
+      </p>
+      <p>
+        {{ form.request_content.label }}<br>
+        {{ form.request_content}}<br>
+        {% for error in form.request_content.errors %}
+        <span>{{ error }}</span>
+        {% endfor %}
+      </p>
+      <p>
+        {{ form.tags.label }}<br>
+        {{ form.tags}}<br>
+        {% for error in form.tags.errors %}
+        <span>{{ error }}</span>
+        {% endfor %}
+      </p>
+      <p>{{ form.submit() }}</p>
+    </form>
+  </div>
 </div>
 <!-- Link to js sheet -->
 <script src="{{ url_for('static', filename='create-request.js')}}"></script>
