--- a/app/static/styling-css/my-profile.css
+++ b/app/static/styling-css/my-profile.css
@@ -1,3 +1,54 @@
 .profile-container{
-    margin: 0 200px;
+    padding-top:100px;
+    padding-left:300px;
+    padding-bottom: 20px;
 }
+
+.profile-container img{
+    height:50px;
+    width:50px;
+    margin-left:20px;
+}
+
+.profile-container h1{
+    font-size:30px;
+    font-weight:bold;
+    color:var(--elements-color);
+    text-transform: uppercase;
+}
+
+.collapsible {
+    background-color: var(--base);
+    color: var(--main-color);
+    cursor: pointer;
+    padding: 18px;
+    width: 80%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    margin-top: 20px;
+    font-weight: bold;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: var(--elements-color);
+  }
+  
+  /* Style the collapsible content. Note: hidden by default */
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    width: 80%;
+    background-color: #f1f1f1;
+    font-size: 20px;
+  }
+
+  .existing-data{
+    font-size: 20px;
+    display:flex;
+    align-items:center;
+  }
+  
