--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,26 +1,42 @@
-{% extends "base.html" %} {% block content %}
-<script src="{{ url_for('static', filename='index.js')
-    }}"></script>
+{% extends "base.html" %} 
+{% block content %}
+<script src="{{ url_for('static', filename='index.js') }}"></script>
 <link
   rel="stylesheet"
-  href="{{ url_for('static', filename='styling-css/index-search-box.css') }}"
+  href="{{ url_for('static', filename='styling-css/home-page.css') }}"
 />
-<link
-  rel="stylesheet"
-  href="{{ url_for('static', filename='styling-css/posts.css') }}"
-/>
-<form action="{{ url_for('search') }}" method="GET" class="form">
-  <label for="search">
-    <input
-      required=""
-      autocomplete="off"
-      placeholder="Search..."
-      id="search"
-      type="text"
-      name="query"
-    />
-    <div class="icon">
-      <svg
+<div class="home-page">
+  <form action="{{ url_for('search') }}" method="GET" class="search-posts">
+    <div class="top-options">
+      <div>
+        <label for="search">
+          <input required="" autocomplete="off" placeholder="Search..." id="search" type="text" name="query"/></div>
+          <div><button class="search-button" type="submit">Search Posts</button></div>
+          <div><button class="request-button" onclick="window.location.href = '../create-request'">Create Request</button></div>
+    </div>
+  </form>
+
+  <h1 class="home-heading">The Posts</h1>
+  <div id="posts">
+    {% for post in posts %}
+    <div class="post">
+      <div class="author-details">
+        <div><img
+          src="/static/user-account-image/{{post.author.avatar_filename}}"
+          alt="User Avatar"
+          /></div>
+        <div><h2>{{ post.author.user_name }}</h2></div>
+      </div>
+      <p>{{ post.request_title }}</p>
+      <p class="view-request-link"><a href="{{ url_for('ViewRequest', request_id=post.request_id) }}">View Full Request >></a></p>
+    </div>
+    <hr />
+    
+  {% endfor %}
+  </div>
+</div>
+
+      <!-- <svg
         stroke-width="2"
         stroke="currentColor"
         viewBox="0 0 24 24"
@@ -60,34 +76,6 @@
     </button>
   </label>
   <button type="submit">Search</button>
-</form>
+</form> -->
 
-<div class="request-card" onclick="window.location.href = '../create-request'">
-  <div class="button-content">
-    <span>Request</span>
-    <span class="hidden-text">Create Request</span>
-  </div>
-</div>
-<link rel="stylesheet" href="../static/styling-css/request-button.css" />
-<h1>The Posts</h1>
-<div id="posts">
-  {% for post in posts %}
-  <div class="post">
-    <img
-      src="/static/user-account-image/{{post.author.avatar_filename}}"
-      height="50"
-      width="50"
-      alt="User Avatar"
-    />
-    <h2>{{ post.author.user_name }}</h2>
-    <!-- redirect to the view request page when one title is clicked -->
-    <p>
-      <a href="{{ url_for('ViewRequest', request_id=post.request_id) }}"
-        >{{ post.request_title }}</a
-      >
-    </p>
-  </div>
-  <hr />
-  {% endfor %}
-</div>
 {% endblock %}
