--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block content %}
 <link
   rel="stylesheet"
-  href="{{ url_for('static', filename='styling-css/search-result.css') }}"
+  href="{{ url_for('static', filename='styling-css/home-page.css') }}"
 />
 <div class="search-result-container">
   <h1>Search Results</h1>
@@ -10,8 +10,7 @@
     <div class="post">
       <h2>{{ result.author.user_name }}</h2>
       <a href="{{ url_for('ViewRequest', request_id=result.request_id) }}"
-        >{{ result.request_title }}</a
-      >
+        >{{ result.request_title }}</a>
       <p>{{ result.request_content }}</p>
     </div>
     <hr />
