--- a/app/static/styling-css/my-profile.css
+++ b/app/static/styling-css/my-profile.css
@@ -52,3 +52,46 @@
     align-items:center;
   }
   
+  .submit-button {
+    --elements-color: #4f2194;
+    --base: #685bbc;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    margin: 0;
+    box-sizing: border-box;
+    outline: none;
+    text-decoration: none;
+    transition: .2s linear;
+    padding: 5px;
+    border-radius: 4px;
+    border: none;
+    text-align: center;
+    /* margin-top: 20px; */
+    background-color: var(--base);
+    color: white;
+    line-height: 1.1;
+    cursor: pointer;
+}
+.submit-button:hover {
+  background-color: var(--elements-color);
+}
+
+#avatar_file {
+  display:  none;
+}
+
+#avatar_file_show {
+  display: inline-block;
+  color: black;
+}
+#avatar_file_show:hover {
+  /* display: inline-block; */
+  color: #685bbc;
+}
+
+.CPass_input > label {
+  display: inline-block;
+  width: 180px;
+  text-align: right;
+  margin-bottom: 5px;
+}
